--- a/Assets/Samples/Conductors/Resources/ListBoxResources.xaml
+++ b/Assets/Samples/Conductors/Resources/ListBoxResources.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                     xmlns:noesis="clr-namespace:Caliburn.Noesis"
                     xmlns:views="clr-namespace:Caliburn.Noesis.Samples.Conductors.Views">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="TextBlockResources.xaml" />
+        <ResourceDictionary Source="ScrollViewerResources.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="ListBoxItem">
@@ -14,8 +16,8 @@
                     <ControlTemplate.Resources>
                         <LinearGradientBrush x:Key="CharacterBorder" StartPoint="0 0" EndPoint="1 0">
                             <LinearGradientBrush.GradientStops>
-                                <GradientStop Offset="0" Color="{StaticResource Color.Background.Normal}" />
-                                <GradientStop Offset="0.33" Color="{StaticResource Color.Background.Normal.Transparent}" />
+                                <GradientStop Offset="0" Color="{StaticResource Color.Background.Medium}" />
+                                <GradientStop Offset="0.33" Color="{StaticResource Color.Background.Medium.Transparent}" />
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
                         <LinearGradientBrush x:Key="CharacterBackground" StartPoint="0 0" EndPoint="1 0">
@@ -31,39 +33,115 @@
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
                     </ControlTemplate.Resources>
-                    <views:DecorativeBorder Name="HighlightBorder"
+                    <views:DecorativeBorder x:Name="HighlightBorder"
                                             Margin="0,0,0,-8"
                                             BorderBrush="Transparent"
                                             BorderThickness="2">
-                        <views:DecorativeBorder Name="InnerBorder"
-                                                Padding="15"
+                        <views:DecorativeBorder.Resources>
+                            <Storyboard x:Key="SelectionAnimation"
+                                        Target="{Binding ElementName=HighlightBorder}"
+                                        TargetProperty="BorderBrush">
+                                <views:SolidColorBrushAnimation AutoReverse="True"
+                                                                RepeatBehavior="Forever"
+                                                                From="{noesis:SolidBrush {StaticResource Color.Foreground.Highlight.Normal},
+                                                                                         Opacity=0.5}"
+                                                                To="{noesis:SolidBrush Color={StaticResource Color.Foreground.Highlight.Normal},
+                                                                                       Opacity=1.0}"
+                                                                Duration="0:0:0.75" />
+                            </Storyboard>
+                        </views:DecorativeBorder.Resources>
+                        <views:DecorativeBorder x:Name="InnerBorder"
                                                 Background="{StaticResource CharacterBackground}"
                                                 BorderBrush="{StaticResource CharacterBorder}"
                                                 BorderThickness="2">
                             <ContentPresenter />
                         </views:DecorativeBorder>
+                        <i:Interaction.Triggers>
+                            <ei:DataTrigger Value="True"
+                                            Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Mode=OneWay}">
+                                <ei:ControlStoryboardAction ControlStoryboardOption="Play"
+                                                            Storyboard="{StaticResource SelectionAnimation}" />
+                            </ei:DataTrigger>
+                            <ei:DataTrigger Value="False"
+                                            Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Mode=OneWay}">
+                                <ei:ControlStoryboardAction ControlStoryboardOption="Stop"
+                                                            Storyboard="{StaticResource SelectionAnimation}" />
+                            </ei:DataTrigger>
+                        </i:Interaction.Triggers>
                     </views:DecorativeBorder>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="InnerBorder" Property="Background" Value="{StaticResource CharacterBackgroundMouseOver}" />
                         </Trigger>
-                        <EventTrigger RoutedEvent="Selected">
-                            <BeginStoryboard Name="BeginSelected">
-                                <Storyboard TargetProperty="BorderBrush"
-                                            TargetName="HighlightBorder">
-                                    <views:SolidColorBrushAnimation AutoReverse="True"
-                                                                    RepeatBehavior="Forever"
-                                                                    From="{noesis:SolidBrush {StaticResource Color.Foreground.Highlight.Normal},
-                                                                                             Opacity=0.5}"
-                                                                    To="{noesis:SolidBrush Color={StaticResource Color.Foreground.Highlight.Normal},
-                                                                                           Opacity=1.0}"
-                                                                    Duration="0:0:0.75" />
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                        <EventTrigger RoutedEvent="Unselected">
-                            <StopStoryboard BeginStoryboardName="BeginSelected" />
-                        </EventTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="ListBox">
+        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="ScrollViewer.CanContentScroll" Value="true" />
+        <Setter Property="MinWidth" Value="120" />
+        <Setter Property="MinHeight" Value="95" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBox">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <views:DecorativeBorder x:Name="Border"
+                                                BorderThickness="2">
+                            <views:DecorativeBorder.BorderBrush>
+                                <LinearGradientBrush StartPoint="0 0" EndPoint="0 1">
+                                    <LinearGradientBrush.GradientStops>
+                                        <GradientStop Offset="0" Color="{StaticResource BorderMediumColor}" />
+                                        <GradientStop Offset="0.50" Color="{StaticResource BorderMediumColor.Transparent}" />
+                                    </LinearGradientBrush.GradientStops>
+                                </LinearGradientBrush>
+                            </views:DecorativeBorder.BorderBrush>
+
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <views:DecorativeBorder x:Name="HeaderPresenter"
+                                                        BorderBrush="{noesis:SolidBrush {StaticResource BorderMediumColor}}"
+                                                        BorderThickness="2">
+                                    <ContentPresenter HorizontalAlignment="Center"
+                                                      Content="{TemplateBinding views:ListBoxExtensions.Header}"
+                                                      ContentTemplate="{TemplateBinding views:ListBoxExtensions.HeaderTemplate}" />
+                                </views:DecorativeBorder>
+                                <ScrollViewer x:Name="ScrollViewer"
+                                              Grid.Row="1"
+                                              Focusable="false"
+                                              HorizontalScrollBarVisibility="Disabled"
+                                              VerticalScrollBarVisibility="Hidden">
+                                    <StackPanel IsItemsHost="True" />
+                                    <i:Interaction.Behaviors>
+                                        <views:SynchronizeWithScrollBarBehavior ScrollBar="{Binding ElementName=ExternalScrollBar}" />
+                                    </i:Interaction.Behaviors>
+                                </ScrollViewer>
+                            </Grid>
+
+                        </views:DecorativeBorder>
+
+                        <ScrollBar x:Name="ExternalScrollBar"
+                                   Grid.Column="1"
+                                   Height="{Binding ActualHeight, ElementName=ScrollViewer}"
+                                   Margin="2,0,0,0"
+                                   VerticalAlignment="Bottom"
+                                   Orientation="Vertical" />
+
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="views:ListBoxExtensions.Header" Value="{x:Null}">
+                            <Setter TargetName="HeaderPresenter" Property="Visibility" Value="Collapsed" />
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
