--- a/Assets/Samples/Transitions/Scripts/Resources/AllResources.xaml
+++ b/Assets/Samples/Transitions/Scripts/Resources/AllResources.xaml
@@ -1,3 +1,5 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../../../../Caliburn.Noesis/Transitions/Resources/TransitionsResources.xaml" />
+    </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
