--- a/Assets/Caliburn.Noesis/Transitions/Resources/TransitionsResources.xaml
+++ b/Assets/Caliburn.Noesis/Transitions/Resources/TransitionsResources.xaml
@@ -1,25 +1,19 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:transitions="clr-namespace:Caliburn.Noesis.Transitions"
-                    xmlns:converters="clr-namespace:Caliburn.Noesis.Assets.Caliburn.Noesis.Platform.Converters">
-    
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Caliburn.Noesis.Assets.Caliburn.Noesis.Platform.Converters"
+    xmlns:transitions="clr-namespace:Caliburn.Noesis.Transitions">
 
     <Style TargetType="{x:Type transitions:Transitioner}">
         <Setter Property="ClipToBounds" Value="True" />
-        <Setter Property="ItemsPanel">
-            <Setter.Value>
-                <ItemsPanelTemplate>
-                    <Grid IsItemsHost="True" />
-                </ItemsPanelTemplate>
-            </Setter.Value>
-        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type transitions:Transitioner}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ItemsPresenter x:Name="ItemsPresenter" />
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid x:Name="ItemsPresenter" IsItemsHost="True" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="SelectedIndex" Value="-1">
@@ -31,26 +25,29 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type transitions:TransitioningContentBase}">
-        <Setter Property="KeyboardNavigation.IsTabStop" Value="False"/>
+    <Style TargetType="{x:Type transitions:TransitioningContentControlBase}">
+        <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type transitions:TransitioningContentBase}">
-                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
-                            x:Name="Border">
-                        <ContentPresenter 
-                                x:Name="ContentPresenter"
-                                Margin="{TemplateBinding Padding}"
-                                Content="{TemplateBinding ContentControl.Content}" 
-                                ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" 
-                                ContentTemplateSelector="{TemplateBinding ContentControl.ContentTemplateSelector}" 
-                                ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"
-                                RenderTransformOrigin=".5,.5">
+                <ControlTemplate TargetType="{x:Type transitions:TransitioningContentControlBase}">
+                    <Border
+                        x:Name="Border"
+                        Padding="{TemplateBinding Padding}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter
+                            x:Name="ContentPresenter"
+                            Content="{TemplateBinding ContentControl.Content}"
+                            ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"
+                            ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"
+                            ContentTemplateSelector="{TemplateBinding ContentControl.ContentTemplateSelector}"
+                            RenderTransformOrigin=".5,.5">
                             <ContentPresenter.RenderTransform>
                                 <TransformGroup>
                                     <MatrixTransform x:Name="PART_MatrixTransform" />
                                     <RotateTransform x:Name="PART_RotateTransform" Angle="0" />
-                                    <ScaleTransform  x:Name="PART_ScaleTransform" ScaleX="1" ScaleY="1" />
+                                    <ScaleTransform x:Name="PART_ScaleTransform" ScaleX="1" ScaleY="1" />
                                     <SkewTransform x:Name="PART_SkewTransform" AngleX="0" AngleY="0" />
                                     <TranslateTransform x:Name="PART_TranslateTransform" X="0" Y="0" />
                                 </TransformGroup>
@@ -62,11 +59,11 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type transitions:TransitioningContent}" BasedOn="{StaticResource {x:Type transitions:TransitioningContentBase}}" />
+    <Style BasedOn="{StaticResource {x:Type transitions:TransitioningContentControlBase}}" TargetType="{x:Type transitions:TransitioningContentControl}" />
 
-    <Style TargetType="{x:Type transitions:TransitionerItem}" BasedOn="{StaticResource {x:Type transitions:TransitioningContentBase}}">
+    <Style BasedOn="{StaticResource {x:Type transitions:TransitioningContentControlBase}}" TargetType="{x:Type transitions:TransitionerItem}">
         <Style.Resources>
-            <converters:NotZeroConverter x:Key="NotZeroConverter"/>
+            <converters:NotZeroConverter x:Key="NotZeroConverter" />
         </Style.Resources>
         <Setter Property="RenderTransformOrigin" Value=".5,.5" />
         <Setter Property="IsEnabled" Value="False" />
