--- a/Assets/Samples/Transitions/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/Transitions/Scripts/Views/MainView.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
     xmlns:transitions="clr-namespace:Caliburn.Noesis.Transitions"
     xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.Transitions.ViewModels"
     d:DataContext="{d:DesignInstance viewModels:MainViewModel,
@@ -34,25 +35,11 @@
         </StackPanel>
         <transitions:Transitioner
             x:Name="Transitioner"
+            AutoApplyTransitionOrigins="True"
             DockPanel.Dock="Top"
+            IsLooping="True"
             ItemsSource="{Binding Items, Mode=OneWay}"
             SelectedItem="{Binding ActiveItem, Mode=TwoWay}"
-            Visibility="Visible">
-            <transitions:Transitioner.ItemContainerStyle>
-                <Style BasedOn="{StaticResource {x:Type transitions:TransitionerItem}}" TargetType="transitions:TransitionerItem">
-                    <Setter Property="ForwardWipe">
-                        <Setter.Value>
-                            <transitions:SlideWipe Direction="Left" />
-                        </Setter.Value>
-                    </Setter>
-                    <Setter Property="BackwardWipe">
-                        <Setter.Value>
-                            <transitions:SlideWipe Direction="Right" />
-                        </Setter.Value>
-                    </Setter>
-                    <Setter Property="OpeningEffect" Value="{transitions:TransitionEffect FadeIn}" />
-                </Style>
-            </transitions:Transitioner.ItemContainerStyle>
-        </transitions:Transitioner>
+            Visibility="Visible" />
     </DockPanel>
 </UserControl>
