--- a/Assets/Samples/Transitions/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/Transitions/Scripts/Views/MainView.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:system="clr-namespace:System;assembly=mscorlib"
     xmlns:transitions="clr-namespace:Caliburn.Noesis.Transitions"
     xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.Transitions.ViewModels"
     d:DataContext="{d:DesignInstance viewModels:MainViewModel,
@@ -38,8 +37,16 @@
             AutoApplyTransitionOrigins="True"
             DockPanel.Dock="Top"
             IsLooping="True"
+            ForwardWipe="{transitions:SlideOutWipe}"
             ItemsSource="{Binding Items, Mode=OneWay}"
             SelectedItem="{Binding ActiveItem, Mode=TwoWay}"
-            Visibility="Visible" />
+            Visibility="Visible">
+            <!--<transitions:Transitioner.ItemContainerStyle>
+                <Style TargetType="transitions:TransitionerItem" BasedOn="{StaticResource {x:Type transitions:TransitionerItem}}">
+                    <Setter Property="TransitionEffect" Value="{transitions:FadeInEffect}" />
+                    <Setter Property="TransitionEffectsOffset" Value="0:0:1" />
+                </Style>
+            </transitions:Transitioner.ItemContainerStyle>-->
+        </transitions:Transitioner>
     </DockPanel>
 </UserControl>
