--- a/Assets/Samples/MarkupExtensions/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/MarkupExtensions/Scripts/Views/MainView.xaml
@@ -1,10 +1,56 @@
-<UserControl x:Class="Caliburn.Noesis.Samples.MarkupExtensions.Views.MainView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.MarkupExtensions.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MainViewModel, IsDesignTimeCreatable=True}"
-             mc:Ignorable="d">
-    <Grid />
+<UserControl
+    x:Class="Caliburn.Noesis.Samples.MarkupExtensions.Views.MainView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="clr-namespace:Caliburn.Noesis.MarkupExtensions"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.MarkupExtensions.ViewModels"
+    d:DataContext="{d:DesignInstance viewModels:MainViewModel,
+                                     IsDesignTimeCreatable=True}"
+    Background="CornflowerBlue"
+    mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="TextAlignment" Value="Justify" />
+            <Setter Property="MaxWidth" Value="700" />
+        </Style>
+        <Style
+            x:Key="Style.TextBlock.Header"
+            BasedOn="{StaticResource {x:Type TextBlock}}"
+            TargetType="{x:Type TextBlock}">
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
+    </UserControl.Resources>
+
+    <Viewbox>
+        <Grid>
+            <StackPanel
+                Margin="10"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+
+                <TextBlock Style="{StaticResource Style.TextBlock.Header}" Text="Words" />
+                <TextBlock Text="{cal:LoremIpsum NumWords=3}" />
+
+                <TextBlock Style="{StaticResource Style.TextBlock.Header}" Text="Sentence" />
+                <TextBlock Text="{cal:LoremIpsum NumSentences=1, NumWords=10}" />
+
+                <TextBlock Style="{StaticResource Style.TextBlock.Header}" Text="Paragraph" />
+                <TextBlock Text="{cal:LoremIpsum NumParagraphs=1, NumSentences=5, NumWords=10}" />
+
+                <TextBlock Style="{StaticResource Style.TextBlock.Header}" Text="Paragraphs" />
+                <TextBlock Text="{cal:LoremIpsum NumParagraphs=3, NumSentences=5, NumWords=10}" />
+
+            </StackPanel>
+        </Grid>
+    </Viewbox>
 </UserControl>
