--- a/Assets/Caliburn.Noesis/Platform/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Platform/ShellView.xaml
@@ -1,18 +1,18 @@
-﻿<Page x:Class="Caliburn.Noesis.ShellView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:cal="clr-namespace:Caliburn.Noesis"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      d:DataContext="{d:DesignInstance cal:ShellViewModel}"
-      mc:Ignorable="d">
+﻿<Page
+    x:Class="Caliburn.Noesis.ShellView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="clr-namespace:Caliburn.Noesis"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DataContext="{d:DesignInstance cal:ShellViewModel}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
             <cal:NullToCollapsedConverter x:Key="NullToCollapsed" />
         </Grid.Resources>
         <ContentControl Content="{Binding MainContentConductor.ActiveItem, Mode=OneWay}" />
-        <ItemsControl Background="{x:Null}"
-                      ItemsSource="{Binding WindowConductor.Items, Mode=OneWay}">
+        <ItemsControl Background="{x:Null}" ItemsSource="{Binding WindowConductor.Items, Mode=OneWay}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <Canvas Background="{x:Null}" />
@@ -20,42 +20,46 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type cal:WindowScreen}">
-                    <Border cal:Draggable.BringToFrontOnClick="True"
-                            BorderBrush="Black"
-                            BorderThickness="2">
+                    <Border
+                        cal:Draggable.BringToFrontOnClick="True"
+                        BorderBrush="Black"
+                        BorderThickness="2">
                         <DockPanel>
-                            <Border Height="25"
-                                    cal:Draggable.IsDragHandle="True"
-                                    Background="DarkSlateGray"
-                                    DockPanel.Dock="Top">
+                            <Border
+                                Height="25"
+                                cal:Draggable.IsDragHandle="True"
+                                Background="DarkSlateGray"
+                                DockPanel.Dock="Top">
                                 <Grid>
-                                    <TextBlock HorizontalAlignment="Center"
-                                               VerticalAlignment="Center"
-                                               FontSize="14"
-                                               FontWeight="Bold"
-                                               Foreground="White"
-                                               Text="{Binding DisplayName, Mode=OneWay}" />
-                                    <Button Width="25"
-                                            HorizontalAlignment="Right"
-                                            Background="DarkRed"
-                                            Command="{Binding CloseWindowCommand, Mode=OneWay}"
-                                            Content="X"
-                                            FontSize="10"
-                                            FontWeight="Bold"
-                                            Foreground="FloralWhite" />
+                                    <TextBlock
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        FontSize="14"
+                                        FontWeight="Bold"
+                                        Foreground="White"
+                                        Text="{Binding DisplayName, Mode=OneWay}" />
+                                    <Button
+                                        Width="25"
+                                        HorizontalAlignment="Right"
+                                        Background="DarkRed"
+                                        Command="{Binding CloseWindowCommand, Mode=OneWay}"
+                                        Content="X"
+                                        FontSize="10"
+                                        FontWeight="Bold"
+                                        Foreground="FloralWhite" />
                                 </Grid>
                             </Border>
-                            <Rectangle Height="2"
-                                       DockPanel.Dock="Top"
-                                       Fill="Black" />
+                            <Rectangle
+                                Height="2"
+                                DockPanel.Dock="Top"
+                                Fill="Black" />
                             <ContentControl Content="{Binding Mode=OneWay}" />
                         </DockPanel>
                     </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <Grid Background="Transparent"
-              Visibility="{Binding DialogConductor.ActiveItem, Mode=OneWay, Converter={StaticResource NullToCollapsed}}">
+        <Grid Background="Transparent" Visibility="{Binding DialogConductor.ActiveItem, Mode=OneWay, Converter={StaticResource NullToCollapsed}}">
             <ContentControl Content="{Binding DialogConductor.ActiveItem, Mode=OneWay}" />
         </Grid>
     </Grid>
