--- a/Assets/Caliburn.Noesis/Platform/Platforms/Unity/Root.xaml
+++ b/Assets/Caliburn.Noesis/Platform/Platforms/Unity/Root.xaml
@@ -2,6 +2,7 @@
     x:Class="Testing.Root"
     x:Name="Root"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:cal="clr-namespace:Caliburn.Noesis;assembly=Assembly-CSharp"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <ContentControl Content="{Binding ShellViewModel}" />
+    <ContentControl cal:View.Model="{Binding ShellViewModel}" />
 </UserControl>
