--- a/Assets/Caliburn.Noesis/Runtime/Platform/Platforms/Unity/Root.xaml
+++ b/Assets/Caliburn.Noesis/Runtime/Platform/Platforms/Unity/Root.xaml
@@ -1,8 +1,7 @@
 <UserControl
-    x:Class="Testing.Root"
-    x:Name="Root"
+    x:Class="Caliburn.Noesis.Root"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:cal="clr-namespace:Caliburn.Noesis;assembly=Assembly-CSharp"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="clr-namespace:Caliburn.Noesis">
     <ContentControl cal:View.Model="{Binding ShellViewModel}" />
 </UserControl>
