--- a/Assets/Caliburn.Noesis/Samples/EarlySample/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Samples/EarlySample/ShellView.xaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Testing.ShellView"
+    x:Class="Caliburn.Noesis.Samples.EarlySample.ShellView"
     x:Name="Root"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
