--- a/Assets/Caliburn.Noesis/Samples~/EarlySample/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Samples~/EarlySample/ShellView.xaml
@@ -2,6 +2,8 @@
     x:Class="Caliburn.Noesis.Samples.EarlySample.ShellView"
     x:Name="Root"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:cal="clr-namespace:Caliburn.Noesis"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="CornflowerBlue">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -13,12 +15,16 @@
                 FontSize="72"
                 Foreground="White"
                 x:Name="OldName" />
+            <Button
+                Content="Click me"
+                HorizontalAlignment="Center"
+                Margin="10"
+                x:Name="ChangeName" />
+            <Button
+                Content="Open Dialog"
+                HorizontalAlignment="Center"
+                Margin="10"
+                x:Name="OpenDialog" />
         </StackPanel>
-        <Button
-            Content="Click me"
-            HorizontalAlignment="Center"
-            Margin="10"
-            VerticalAlignment="Bottom"
-            x:Name="ChangeName" />
     </Grid>
 </UserControl>
